made transition animations for each nav link and experience tabs. Added content for about me and projects

--- a/src/index.css
+++ b/src/index.css
@@ -96,11 +96,11 @@ nav {
 }
 
 /* --------------------- AboutMe --------------------- */
-.aboutme-page {
+.aboutme-section {
   margin-top: 10vh !important;
   color: white;
   background-color: rgb(4, 69, 70);
-  padding: 5%;
+  padding: 10%;
   border-radius: 1%;
 }
 
@@ -116,4 +116,49 @@ nav {
   height: 20vh;
 }
 
-/* @keyframes  */
+.fadeInTop {
+  -webkit-animation: fadeInTop 2s both;
+  -moz-animation: fadeInTop 20s both;
+  -o-animation: fadeInTop 20s both;
+  animation: fadeInTop 2s both;
+}
+@-webkit-keyframes fadeInTop {
+  0%{
+    opacity: 0;
+    -webkit-transform: translateY(-50px);
+  }
+  100%{
+    opacity: 1;
+    -webkit-transform: translateY(0);
+  }
+}
+@-moz-keyframes fadeInTop {
+  0%{
+    opacity: 0;
+    -moz-transform: translateY(-50px);
+  }
+  100%{
+    opacity: 1;
+    -moz-transform: translateY(0);
+  }
+}
+@-o-keyframes fadeInTop {
+  0%{
+    opacity: 0;
+    -o-transform: translateY(-50px);
+  }
+  100%{
+    opacity: 1;
+    -o-transform: translateY(0);
+  }
+}
+@keyframes fadeInTop {
+  0%{
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+  100%{
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
