made a few layout changes to homepage, projects page, and edits in about me. Also added scroll to top on page change

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,6 @@ nav {
   font-weight: bold;
   font-size: 1.3rem;
   color: rgb(4, 69, 70);
-  
 }
 
 .nav-home {
@@ -32,7 +31,6 @@ nav {
   transition: ease-out 0.3s;
   position: relative;
   z-index: 1;
-  
 }
 
 .nav-item-area:before {
@@ -61,7 +59,10 @@ nav {
 
 .ham-tab {
   z-index: 1;
-  position: fixed;
+  position:fixed;
+  left:0;
+  right:0;
+  width: 100vw;
   background-color: #0e3529;
   font-size: 1.2em;
   transition: 1s ease;
@@ -98,14 +99,19 @@ i:hover {
 
 .main-title {
   margin-top: 15vh;
+  font-size: 3rem;
+
 }
+
+.description-title {
+  font-size: 2rem;
+}
+
 
 .projects-hp {
   height: 40vh;
   color: white;
   background-image: url("./images/coding_bg.PNG") ;
-  /* filter: blur(4px);
-  -webkit-filter: blur(4px); */
 }
 
 h2.projects-title-hp {
@@ -116,13 +122,19 @@ h2.experience-title-hp, h2.about-me-title-hp {
   text-align: center;
 }
 
-h2.projects-title-hp:hover, h2.experience-title-hp:hover, h2.about-me-title-hp:hover {
+h2.projects-title-hp:hover, .experience-hp:hover, .about-me-hp:hover {
   color: rgb(67, 189, 128);
 }
 
 .experience-hp {
   height: 40vh;
   background-color: rgb(3, 42, 43);
+  border-radius: 25px;
+  margin-top: 5vh;
+}
+.exp-conatiner-hp {
+  width: 90vw;
+  
 }
 
 .about-me-hp {
@@ -141,7 +153,7 @@ h2.projects-title-hp:hover, h2.experience-title-hp:hover, h2.about-me-title-hp:h
 }
 
 .btn-toggle:hover {
-  color: white;
+  color: rgb(99, 241, 163);
 }
 
 .tab-box {
@@ -284,6 +296,20 @@ h2.projects-title-hp:hover, h2.experience-title-hp:hover, h2.about-me-title-hp:h
   }
 }
 
+@media (min-width: 900px) {
+  .exp-abtme-container {
+    display: flex;
+    flex-direction: row;
+  }
+}
+
+@media (max-width: 900px) {
+  .exp-abtme-container {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
 @media (min-width: 700px){
   .sm-screen-nav {
     display: none;
@@ -334,8 +360,8 @@ h2.projects-title-hp:hover, h2.experience-title-hp:hover, h2.about-me-title-hp:h
   }
 }
 
-/* turn nav bar in hamburger menu */
+/* turn nav bar in hamburger menu
 @media (max-width: 590px) {
 
-}
+} */
 
