--- a/src/index.css
+++ b/src/index.css
@@ -172,6 +172,7 @@ h2.projects-title-hp:hover, .experience-hp:hover, .about-me-hp:hover {
 
 .exp-container {
   flex-direction: row;
+  margin: 8vh 0;
 }
 
 .exp-box {
@@ -198,8 +199,11 @@ h2.projects-title-hp:hover, .experience-hp:hover, .about-me-hp:hover {
 /* --------------------- Projects --------------------- */
 
 .project-page {
-  width: 90%;
   height: 100vh;
+}
+
+.project-content {
+  width: 90%;
 }
 
 .cards {
