added a highlight feature, where the highlight is the same theme color of the website

--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,11 @@ body {
   height: 100%;
 } */
 
+*::selection {
+  background-color: #0e3529;
+  color: white;
+}
+
 /* --------------------- NavBar --------------------- */
 
 nav {
