--- a/src/index.css
+++ b/src/index.css
@@ -120,15 +120,23 @@ i:hover {
   color: rgb(2, 38, 39);
 }
 
+.hp-video { 
+  background-repeat: repeat-x;
+  height: 30rem;
+  width: 50rem;
+}
 
 .projects-hp {
   height: 40vh;
   color: white;
-  background-image: url("./images/coding_bg.PNG");
+}
+
+.pos-forward {
+  z-index: 2;
 }
 
 h2.projects-title-hp {
-  background-color: rgb(51, 51, 51, 0.8);
+  background-color: rgb(51, 51, 51, 0.93);
 }
 
 h2.experience-title-hp, h2.about-me-title-hp {
