--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=News+Cycle&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -125,11 +127,6 @@ i:hover {
 
 /* --------------------- HomePage --------------------- */
 
-.main-title {
-  font-size: 5.5rem;
-  font-family: 'Black Han Sans', sans-serif;
-  color: rgb(2, 38, 39);
-}
 
 .description-title {
   font-size: 3.5rem;
