--- a/src/index.css
+++ b/src/index.css
@@ -207,10 +207,10 @@ h2.projects-title-hp:hover, .experience-hp:hover, .about-me-hp:hover {
   border: solid rgb(31, 31, 31) 1px;
 }
 
-.pos-forward {
+/* .pos-forward {
   z-index: 2;
   transform: translate(0%, 120%);
-}
+} */
 
 /* --------------------- Experience --------------------- */
 
@@ -450,18 +450,44 @@ h2.projects-title-hp:hover, .experience-hp:hover, .about-me-hp:hover {
   }
 }
 
-@media (max-width: 1050px) {
+@media (max-width: 1110px) {
   .mobile-video {
     width: 400px;
   }
-}
 
-@media (max-width: 1000px) {
   .rows-container {
     flex-direction: column !important;
     border: 0;
   }
+
+  .sm-screen-nav {
+    display: flex;
+  }
+
+  .lg-screen-nav {
+    display: none;
+  }
+
+  .mobile-video {
+    width: 60vw;
+  }
 }
+
+@media (min-width: 1110px) {
+  .sm-screen-nav {
+    display: none;
+  }
+  
+  .ham-tab {
+    display: none !important;
+  }
+
+  .lg-screen-nav {
+    display: flex;
+  }
+
+}
+
 
 @media (min-width: 900px) {
   .exp-abtme-container {
@@ -512,37 +538,6 @@ h2.projects-title-hp:hover, .experience-hp:hover, .about-me-hp:hover {
     margin: 0px !important;
 
   }
-}
-
-@media (min-width: 850px){
-  .sm-screen-nav {
-    display: none;
-  }
-  
-  .ham-tab {
-    display: none !important;
-  }
-
-  .lg-screen-nav {
-    display: flex;
-  }
-}
-
-@media (max-width: 850px) {
-  .sm-screen-nav {
-    display: flex;
-  }
-
-  .lg-screen-nav {
-    display: none;
-  }
-
-  .mobile-video {
-    width: 60vw;
-  }
-}
-
-@media (max-width: 900px) {
 
   .cards {
     width: 100%;
@@ -560,7 +555,8 @@ h2.projects-title-hp:hover, .experience-hp:hover, .about-me-hp:hover {
   }
 }
 
-@media (min-width: 756px) {
+
+@media (min-width: 755px) {
   .resume-note {
     display: none !important;
   }
@@ -625,13 +621,13 @@ h2.projects-title-hp:hover, .experience-hp:hover, .about-me-hp:hover {
       height: 65vh !important;
   }
 
-  @media (max-width: 428px) {
-    .pos-forward {
-      transform: translate(0%, 50%);
-    }
-    .m-project-desc {
-      padding: 25px !important;
-    }
+  .m-project-desc {
+    padding: 25px !important;
   }
+
+  .pos-forward {
+    transform: translate(0%, 50%);
+  }
+
 
 }
