finished changing the first half of the media queries with tw breakpoints

--- a/src/index.css
+++ b/src/index.css
@@ -240,17 +240,17 @@ h2.projects-title-hp:hover, .experience-hp:hover, .about-me-hp:hover {
   box-shadow: 0 12px 16px 0px rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
-.tab-box {
+/* .tab-box {
   flex-direction: column;
   margin-right: 10vw;
   margin-left: 5vw;
   height: 40vh;
-}
+} */
 
-.exp-container {
+/* .exp-container {
   flex-direction: row;
   margin: 8vh 0;
-}
+} */
 
 .exp-box {
   max-width: 70vw !important;
@@ -301,10 +301,10 @@ h2.projects-title-hp:hover, .experience-hp:hover, .about-me-hp:hover {
   max-width: 80vw;
 }
 
-.project-page {
+/* .project-page {
   height: 100%;
   width: 90%;
-}
+} */
 
 .project-border {
   border: 1px rgb(153, 156, 156) solid;
@@ -354,10 +354,10 @@ h2.projects-title-hp:hover, .experience-hp:hover, .about-me-hp:hover {
   height: 0px;
 }
 
-.cards {
+/* .cards {
   width: 330px;
-  border: 0px;
-}
+
+} */
 
 .card img {
   width: 300px;
@@ -450,109 +450,105 @@ h2.projects-title-hp:hover, .experience-hp:hover, .about-me-hp:hover {
   }
 }
 
-@media (max-width: 1110px) {
-  .mobile-video {
-    width: 400px;
-  }
-
-  .rows-container {
+/* @media (max-width: 1110px) { */
+  /* .rows-container {
     flex-direction: column !important;
-    border: 0;
-  }
+  } */
 
-  .sm-screen-nav {
+  /* .sm-screen-nav {
     display: flex;
-  }
+  } */
 
-  .lg-screen-nav {
+  /* .lg-screen-nav {
     display: none;
-  }
+  } */
 
-  .mobile-video {
+  /* .mobile-video {
     width: 60vw;
-  }
-}
+  } */
+/* } */
 
-@media (min-width: 1110px) {
-  .sm-screen-nav {
+/* @media (min-width: 1110px) { */
+  /* .sm-screen-nav {
     display: none;
-  }
+  } */
   
-  .ham-tab {
+  /* .ham-tab {
     display: none !important;
-  }
+  } */
 
-  .lg-screen-nav {
+  /* .lg-screen-nav {
     display: flex;
-  }
+  } */
 
-}
+/* } */
 
 
-@media (min-width: 900px) {
-  .exp-abtme-container {
+/* @media (min-width: 900px) { */
+  /* .exp-abtme-container {
     display: flex;
     flex-direction: row;
-  }
-}
+  } */
+/* } */
 
 @media (max-width: 900px) {
-  .exp-abtme-container {
+  /* .exp-abtme-container {
     display: flex;
     flex-direction: column;
-  }
+  } */
   
-  .video-reflect {
+  /* .video-reflect {
     height: 20rem;
-  }
+  } */
 
-  .move-left {
+  /* .move-left {
     margin-left: 18rem;
-  }
+  } */
 
-  .move-right {
+  /* .move-right {
     margin-right: 18rem;
-  }
+  } */
 
-  .hp-video {
+  /* .hp-video {
     height: 20rem;
-  }
+  } */
 
-  .pos-forward {
+  /* .pos-forward {
     transform: translate(0%, 100%);
-  }
+  } */
 
-  .project-border {
-    flex-direction: column !important;
-    align-items: center;
-    min-width: none !important;
-    width: 80vw !important;
+  /* .project-border { */
+    /* flex-direction: column !important;
+    align-items: center; */
+    /* min-width: none !important;
+    width: 80vw !important; */
     
-  }
+  /* } */
 
-  .m-project-desc {
+  /* .m-project-desc {
     width: 80vw;
-  }
+  } */
   
-  .project-page {
+  /* .project-page {
     margin: 0px !important;
 
-  }
+  } */
 
-  .cards {
+  /* .cards {
     width: 100%;
-  }
+  } */
 
-  .exp-container {
+  /* .exp-container {
     flex-direction: column;
-  }
-  .tab-box {
+  } */
+  
+  /* .tab-box {
     flex-direction: row;
     max-height: 15vh;
-  }
-  .btn-exp {
+  } */
+  /* .btn-exp {
     max-height: 100px;
-  }
+  } */
 }
 
 
@@ -563,9 +559,9 @@ h2.projects-title-hp:hover, .experience-hp:hover, .about-me-hp:hover {
 }
 
 @media (max-width: 755px) {
-  .tab-box {
+  /* .tab-box {
     flex-direction: column;
-  }
+  } */
 
   .resume-contain {
     overflow: auto;
