--- a/src/index.css
+++ b/src/index.css
@@ -553,9 +553,9 @@ h2.projects-title-hp:hover, .experience-hp:hover, .about-me-hp:hover {
 
 
 @media (min-width: 755px) {
-  .resume-note {
+  /* .resume-note {
     display: none !important;
-  }
+  } */
 }
 
 @media (max-width: 755px) {
@@ -563,38 +563,38 @@ h2.projects-title-hp:hover, .experience-hp:hover, .about-me-hp:hover {
     flex-direction: column;
   } */
 
-  .resume-contain {
+  /* .resume-contain {
     overflow: auto;
     justify-content: flex-start !important;
-  }
-  .resume-img {
+  } */
+  /* .resume-img {
     width: 700px;    
-  }
+  } */
 
-  .resume-note {
+  /* .resume-note {
     display: flex !important;
-  }
+  } */
 
   
 }
 
-@media (max-width: 600px) {    
-  .hp-video {
+/* @media (max-width: 600px) {     */
+  /* .hp-video {
     height: 15rem;
-  }
+  } */
 
-  .video-reflect {
+  /* .video-reflect {
     height: 15rem;
-  }
+  } */
 
-  .pos-forward {
+  /* .pos-forward {
     transform: translate(0%, 70%);
-  }
+  } */
 
-  .projects-hp {
+  /* .projects-hp {
     height: 20vh;
-  }
-}
+  } */
+/* } */
 
 @media screen and (max-width: 500px) {
   .footer-ab-me {
@@ -621,9 +621,9 @@ h2.projects-title-hp:hover, .experience-hp:hover, .about-me-hp:hover {
     padding: 25px !important;
   }
 
-  .pos-forward {
+  /* .pos-forward {
     transform: translate(0%, 50%);
-  }
+  } */
 
 
 }
