--- a/src/index.css
+++ b/src/index.css
@@ -153,15 +153,15 @@ h2.projects-title-hp:hover, .experience-hp:hover, .about-me-hp:hover {
   color: rgb(67, 189, 128);
 }
 
-.experience-hp {
+/* .experience-hp {
   height: 40vh;
   background-color: rgb(3, 42, 43);
   border-radius: 25px;
   margin-top: 5vh;
-}
-.exp-conatiner-hp {
+} */
+/* .exp-conatiner-hp {
   width: 90vw;
-}
+} */
 
 .about-me-hp {
   height: 40vh;
