--- a/src/index.css
+++ b/src/index.css
@@ -313,8 +313,8 @@ h2.projects-title-hp:hover, .experience-hp:hover, .about-me-hp:hover {
 }
 
 .project-border:hover {
-  zoom: 1.1 !important;
-  font-size: 10vw !important;
+  /* zoom: 1.1 !important; */
+  /* font-size: 10vw !important; */
   border: 5px rgb(4, 69, 70) solid;
 }
 
